# esp32-ble-mesh-announcement

./: .gitignore  CMakeLists.txt  LICENSE  README.md  mesh_callbacks.cpp
core/: ble_mesh_dev.cpp  ble_mesh_element.cpp  ble_mesh_node.cpp  ble_mesh_prov.cpp  ble_mesh_provisioner.cpp
examples/mesh-node/generic/level_client/: CMakeLists.txt
examples/mesh-node/generic/level_server/: CMakeLists.txt
examples/mesh-node/generic/location_server/: CMakeLists.txt
include/: ble_context.h  ble_mesh_dev.h  ble_mesh_element.h  ble_mesh_model.h  ble_mesh_node.h  ble_mesh_prov.h  ble_mesh_provisioner.h  callbacks.h
include/models/foundation/: ble_mesh_config_cli.h  ble_mesh_config_srv.h  ble_mesh_health_cli.h  ble_mesh_health_srv.h
include/models/generic/: generic_battery_models.h  generic_level_models.h  generic_location_models.h  generic_model.h  generic_on_off_models.h
include/models/light/: ble_mesh_light_hsl_models.h  ble_mesh_light_lightness_models.h  light_model.h
include/models/scene/: ble_mesh_scene_models.h  ble_mesh_time_models.h
models/: ble_mesh_model.cpp  utility.c
models/foundation/: ble_mesh_config_cli.cpp  ble_mesh_config_srv.cpp
models/generic/: generic_battery_models.cpp  generic_level_client.cpp  generic_level_server.cpp  generic_location_cli.cpp  generic_location_srv.cpp  generic_model.cpp  generic_on_off_client.cpp  generic_on_off_server.cpp
models/light/: ble_mesh_light_hsl_models.cpp  ble_mesh_light_lightness_server.cpp
models/scene/: ble_mesh_scene_cli.cpp  ble_mesh_scene_srv.cpp  ble_mesh_time_cli.cpp  ble_mesh_time_srv.cpp
(+12 files in other folders)
